<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TurtleSketch</string>
    <string name="title_add">Add to collection</string>
    <string name="title_list">Lists</string>
    <string name="title_search">Search</string>
    <string name="title">Title</string>
    <string name="type">Type</string>
    <string name="title_hint">Title to search</string>
    <string name="books">Books</string>
    <string name="music">Music</string>
    <string name="serie">Series</string>
    <string name="movie">Movies</string>
    <string name="search">Search</string>
    <string name="config">Configuration</string>
    <string name="theme">Theme</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="automatic_theme">System default</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="add_list">Add list</string>
    <string name="cancel">Cancel</string>
    <string name="add_list_message">Set the name of the list you want to create</string>
    <string name="newListHint">Name of the new List</string>
    <string name="cover_desc">Cover of the media</string>
    <string name="media">Media</string>
    <string name="es">Spanish</string>
    <string name="en">English</string>
    <string name="fr">French</string>
    <string name="de">German</string>
    <string name="be">Deutch</string>
    <string name="add">Add</string>
    <string name="list_results">List results</string>
    <string name="confirm_insert">The content is saved without problems.</string>
    <string name="confirm">Insert correctly</string>
    <string name="error">Error</string>
    <string name="error_insert">An unexpected error has happen on saving the content</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_result_found">No results found for that Title. Do you want to add it?</string>
    <string name="no_media_list">No media has been added to this list at this moment. You can add one title pressing the + icon</string>
    <string name="more_less">More content first</string>
    <string name="less_more">Less content first</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="by_content_type">Content of type</string>
    <string name="by_number_equal_more">Contents or more in the list</string>
    <string name="by_number_equal_less">Contents or less in the list</string>
    <string name="by_number_equals">Content in the list</string>
    <string name="number_hint" translatable="false">1</string>
    <string name="apply">Apply</string>
    <string name="original">Original</string>
    <string name="sort_list">Sort list</string>
    <string name="filter_list">Filter list</string>
    <string name="sort_list_message">Select by which method do you want to sort the list</string>
    <string name="filter_list_message">Select by which method do you want to filter the list</string>
    <string name="delete_list">Delete the list</string>
    <string name="delete_list_message">Are you sure you want to delete the list and all it\'s content?</string>
    <string name="delete_list_media">Delete the media</string>
    <string name="delete_list_media_message">Are you sure you want to delete this media from the list?</string>
    <string name="author">Author</string>
    <string name="publisher">Publisher</string>
    <string name="language">Language</string>
    <string name="gender">Gender</string>
    <string name="plot_desc">Plot/Description</string>
    <string name="director">Director</string>
    <string name="duration">Duration</string>
    <string name="suggestions">Suggested just for you</string>
    <string name="connect">Connect</string>
    <string name="import_data">Import list</string>
    <string name="google" translatable="false">Google</string>
    <string name="sportify" translatable="false">Spotify</string>
    <string name="deezer" translatable="false">Deezer</string>
    <string name="author_app">Made by Pablo Oraa Lopez. Version</string>
    <string name="app_ver" translatable="false">1.1.3</string>
    <string name="about" translatable="false">%1$s %2$s</string>
    <string name="server_client_id" translatable="false">757060070955-q1bdjvs0u6ug0dbo96nn83kqpmicogoh.apps.googleusercontent.com</string>
    <string name="client_id_spotify" translatable="false">9ddbd7d70e1f44cbb80b6c40f40d91ab</string>
    <string name="client_secret_id_spotify" translatable="false">373751deac03472fa9c60e56f8afc3a6</string>
    <string name="add_to">Add to</string>
    <string name="add_to_list">Add to list</string>
    <string name="importing">Importing your lists</string>
    <string name="imported">Lists imported successfully</string>
    <string name="creating_suggestions">Searching for some suggestions just for you</string>
    <string name="searching">Searching for results</string>
</resources>