<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ln_filter_sort"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/rg_filter"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/original" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/by_content_type" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/by_number_equal_more" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/by_number_equal_less" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/by_number_equals" />

    </RadioGroup>

    <EditText
        android:id="@+id/et_number_equals"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/number_hint"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/rg_filter"
        app:layout_constraintTop_toBottomOf="@+id/et_number_equals_less" />

    <EditText
        android:id="@+id/et_number_equals_more"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/number_hint"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/rg_filter"
        app:layout_constraintTop_toBottomOf="@+id/sp_type_filter" />

    <EditText
        android:id="@+id/et_number_equals_less"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/number_hint"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/rg_filter"
        app:layout_constraintTop_toBottomOf="@+id/et_number_equals_more" />

    <Spinner
        android:id="@+id/sp_type_filter"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:layout_weight="1"
        android:entries="@array/types"
        app:layout_constraintStart_toEndOf="@+id/rg_filter"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toStartOf="@+id/rg_filter"
        app:layout_constraintTop_toBottomOf="@+id/rg_filter">

        <RadioButton
            android:id="@+id/rb_original"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/original" />

        <RadioButton
            android:id="@+id/rb_alphabetically"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alphabetically" />

        <RadioButton
            android:id="@+id/rb_more_less"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/more_less" />

        <RadioButton
            android:id="@+id/rb_less_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/less_more" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>